other-mpol/add-emptydir-sizelimit/add-emptydir-sizelimit.yaml
apiVersion: policies.kyverno.io/v1
kind: MutatingPolicy
metadata:
  name: add-emptydir-sizelimit
  annotations:
    pod-policies.kyverno.io/autogen-controllers: none
    policies.kyverno.io/title: Add emptyDir sizeLimit
    policies.kyverno.io/category: Other
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/minversion: 1.17.0
    kyverno.io/kyverno-version: 1.7.3,1.8.0-rc2
    kyverno.io/kubernetes-version: "1.24"
    policies.kyverno.io/description: >-
      When a Pod requests an emptyDir, by default it does not have a size limit which
      may allow it to consume excess or all of the space in the medium backing the volume.
      This can quickly overrun a Node and may result in a denial of service for other
      workloads. This policy adds a sizeLimit field to all Pods mounting emptyDir
      volumes, if not present, and sets it to 100Mi.
spec: 
  matchConstraints:
    resourceRules:
    - apiGroups: [""]
      apiVersions: ["v1"]
      operations: ["CREATE", "UPDATE"]
      resources: ["pods"]
  mutations:
  - patchType: ApplyConfiguration
    applyConfiguration:
      expression: >-
          Object{
            spec: Object.spec{
              volumes: (
                has(object.spec.volumes)
                ? object.spec.volumes.map(v,
                    has(v.emptyDir)
                    ? Object.spec.volumes{
                        name: v.name,
                        emptyDir: Object.spec.volumes.emptyDir{
                          sizeLimit: has(v.emptyDir.sizeLimit) ? v.emptyDir.sizeLimit : "100Mi"
                        }
                      }
                    : v
                  )
                : object.spec.volumes
              )
            }
          }
